# FastAPI-Practice

./: .gitignore  main.py  pyproject.toml  requirements.txt
api/: router.py  schemas.py
app/: config.py  database.py
app/models/: item.py
core/: todos.py
